--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "course",
   "version": "0.0.1",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0"
+  }
 }
