--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "spectre.css": "^0.3.2",
     "stylelint-config-standard": "^17.0.0"
   }
 }
