--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "spectre.css": "^0.3.2",
+    "stream-combiner2": "^1.1.1",
     "stylelint-config-standard": "^17.0.0"
   }
 }
