--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
+    "gulp-cache": "^0.4.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat-css": "^2.3.0",
+    "gulp-debug": "^3.1.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.3.0",
     "gulp-less": "^3.3.2",
+    "gulp-notify": "^3.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "imagemin-jpeg-recompress": "^5.1.0",
     "spectre.css": "^0.3.2",
     "stream-combiner2": "^1.1.1",
     "stylelint-config-standard": "^17.0.0"
