--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
-    "stylelint": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
@@ -21,12 +20,14 @@
     "gulp-imagemin": "^3.3.0",
     "gulp-less": "^3.3.2",
     "gulp-notify": "^3.0.0",
+    "gulp-order": "^1.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "imagemin-jpeg-recompress": "^5.1.0",
     "spectre.css": "^0.3.2",
     "stream-combiner2": "^1.1.1",
+    "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0"
   }
 }
