--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
-    "gulp-cache": "^0.4.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat-css": "^2.3.0",
-    "gulp-debug": "^3.1.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
@@ -23,14 +21,19 @@
     "gulp-order": "^1.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-svg-sprite": "^1.3.7",
     "gulp-uglify": "^3.0.0",
     "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-webp": "^4.0.0",
     "spectre.css": "^0.3.2",
     "stream-combiner2": "^1.1.1",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0"
   },
   "dependencies": {
-    "imagemin-pngquant": "^5.0.1"
+    "imagemin": "^5.3.1",
+    "imagemin-pngquant": "^5.0.1",
+    "imagemin-webp": "^4.0.0",
+    "lozad": "0.0.3"
   }
 }
