--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gulp-order": "^1.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svg-sprites": "^4.1.2",
     "gulp-uglify": "^3.0.0",
     "imagemin-jpeg-recompress": "^5.1.0",
     "imagemin-webp": "^4.0.0",
+    "intersection-observer": "^0.4.2",
+    "material-design-icons": "^3.0.1",
     "spectre.css": "^0.3.2",
     "stream-combiner2": "^1.1.1",
     "stylelint": "^8.0.0",
