--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,13 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "headers": [ {
+      "source" : "**/*.@(jpg|jpeg|gif|png|webp|svg|css|js)",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "max-age=3153600"
+      } ]
+    } ]
   }
 }
