--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,25 @@
 {
   "short_name": "МАРАФОН",
-  "name": "«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОН-ЛАЙН МАРАФОН",
+  "name": "«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ»",
   "icons": [
     {
-      "src":"images/icon192x192.png",
+      "src":"/icon192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src":"/icon256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": "/?utm_source=homescreen",
   "background_color": "#fff",
-  "theme_color": "#526e45",
+  "theme_color": "#5c5edc",
   "display": "standalone"
 }
